# rust-gpu

./: .gitattributes  .gitignore  .gitmodules  .mergify.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  android.nix  attributes.html  build_codegen.sh  default.nix  deny.toml  index.html  introduction.html  libempty.rlib  print.html  run.bat  run.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  setup.bat  setup.sh  shaders-build.sh  shaders-watch.sh
.github/install-spirv-tools/: Cargo.toml
.github/install-spirv-tools/src/: main.rs
crates/rustc_codegen_spirv/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
crates/rustc_codegen_spirv-types/: Cargo.toml  README.md
crates/rustc_codegen_spirv-types/src/: compile_result.rs  lib.rs
crates/rustc_codegen_spirv/src/: abi.rs  attr.rs  builder_spirv.rs  compile_result.rs  custom_decorations.rs  custom_insts.rs  decorations.rs  finalizing_passes.rs  lib.rs  link.rs  spirv_type.rs  spirv_type_constraints.rs  symbols.rs  target.rs  target_feature.rs
crates/spirv-builder/: Cargo.toml  README.md  build.rs
crates/spirv-builder-macros/: Cargo.toml
crates/spirv-builder-macros/src/: lib.rs
crates/spirv-builder/src/: depfile.rs  error.rs  lib.rs  options.rs  rustc.rs  utils.rs  watch.rs
crates/spirv-builder/target-specs/: spirv-unknown-opengl4.0.json  spirv-unknown-opengl4.1.json  spirv-unknown-opengl4.2.json  spirv-unknown-opengl4.3.json  spirv-unknown-opengl4.5.json  spirv-unknown-spv1.0.json  spirv-unknown-spv1.1.json  spirv-unknown-spv1.2.json  spirv-unknown-spv1.3.json  spirv-unknown-spv1.4.json  spirv-unknown-spv1.5.json  spirv-unknown-vulkan1.0.json  spirv-unknown-vulkan1.1.json  spirv-unknown-vulkan1.1spv1.4.json  spirv-unknown-vulkan1.2.json
crates/spirv-std/: Cargo.toml  README.md
crates/spirv-std-macros/: Cargo.toml
crates/spirv-std-macros/src/: lib.rs
crates/spirv-std/macros/: Cargo.toml  README.md
crates/spirv-std/shared/: Cargo.toml  README.md
crates/spirv-std/src/: arch.rs  bindless.rs  byte_addressable_buffer.rs  derivative.rs  descriptor_indexing.rs  float.rs  image.rs  integer.rs  lib.rs  math_ext.rs  matrix.rs  memory.rs  number.rs  ray_tracing.rs  runtime_array.rs  sampler.rs  scalar.rs  sealed.rs  storage_class.rs  textures.rs  typed_buffer.rs  vector.rs
crates/testsuite/: Cargo.toml
crates/testsuite/src/: lib.rs
examples/example-runner/: Cargo.toml  build.rs
examples/example-runner-cpu/: Cargo.toml
examples/example-runner-cpu/src/: main.rs
examples/example-runner/src/: main.rs  vert.spv
examples/example-shader/: Cargo.toml  build.rs
examples/example-shader/src/: lib.rs
examples/multibuilder/: Cargo.toml
examples/multibuilder/src/: main.rs
examples/runners/ash/: Cargo.toml  build.rs
examples/runners/cpu/: Cargo.toml
examples/runners/wgpu/: Cargo.toml  README.md  build.rs
examples/runners/wgpu-compute/: Cargo.toml  build.rs
examples/shaders/compute-shader/: Cargo.toml
examples/wgpu-example-compute-runner/: Cargo.toml  build.rs
examples/wgpu-example-compute-runner/src/: main.rs
examples/wgpu-example-compute-shader/: Cargo.toml
examples/wgpu-example-compute-shader/src/: lib.rs
examples/wgpu-example-runner/: Cargo.toml  build.rs
examples/wgpu-example-runner/src/: main.rs
examples/wgpu-example-shader/: Cargo.toml  build.rs
examples/wgpu-example-shader/src/: lib.rs
rspirv-linker/: Cargo.toml
rspirv-linker/src/: capability_computation.rs  dce.rs  def_analyzer.rs  duplicates.rs  import_export_link.rs  inline.rs  lib.rs  main.rs  mem2reg.rs  simple_passes.rs  test.rs  ty.rs  zombies.rs
rspirv-linker/test/1/: body_1.spv  body_1.txt  body_2.spv  body_2.txt
rustc_codegen_spirv/: Cargo.toml  build_codegen.bat  build_libcore_test.bat  build_libcore_test.sh  nightly  run.bat  run.sh  rust-toolchain  setup.bat  setup.sh  spirv-target.json
rustc_codegen_spirv/build_libcore_test/: Cargo.toml
rustc_codegen_spirv/build_libcore_test/src/: lib.rs
rustc_codegen_spirv/run_libcore_test/: Cargo.toml
rustc_codegen_spirv/run_libcore_test/src/: main.rs
rustc_codegen_spirv/src/: abi.rs  builder_spirv.rs  codegen_cx.rs  ctx.rs  finalizing_passes.rs  lib.rs  link.rs  poison_pass.rs  spirv_type.rs  symbols.rs  things.rs  trans.rs
rustc_codegen_spirv/src/builder/: builder_methods.rs  ext_inst.rs  intrinsics.rs  mod.rs
rustc_codegen_spirv/src/codegen_cx/: constant.rs  declare.rs  entry.rs  mod.rs  type_.rs
rustc_codegen_spirv/src/ctx/: local_tracker.rs  type_tracker.rs
rustc_codegen_spirv/src/linker/: dce.rs  def_analyzer.rs  duplicates.rs  import_export_link.rs  inline.rs  mem2reg.rs  mod.rs  structurizer.rs  test.rs  ty.rs  zombies.rs
rustc_codegen_spirv/test/: lib.rs
rustc_codegen_spirv/tests/: compile_and_val.rs
spirv-builder/: Cargo.toml
spirv-builder/src/: depfile.rs  lib.rs
spirv-builder/src/test/: basic.rs  control_flow.rs  mod.rs
spirv-tools/: Cargo.toml
spirv-tools-sys/: Cargo.toml  build.rs  generate.rs
spirv-tools-sys/src/: assembler.rs  lib.rs  opt.rs  shared.rs  val.rs
spirv-tools-sys/src/c/: opt.cpp  val.cpp
spirv-tools/examples/: as.rs
spirv-tools/src/: assembler.rs  binary.rs  cmd.rs  error.rs  lib.rs  opt.rs  shared.rs  util.rs  val.rs
spirv-tools/src/assembler/: compiled.rs  tool.rs
spirv-tools/src/opt/: compiled.rs  options.rs  tool.rs
spirv-tools/src/val/: compiled.rs  tool.rs
spirv-tools/tests/: val.rs
tests/: Cargo.toml  README.md  empty.rs  lib.rs
tests/deps-helper/: Cargo.toml
tests/src/: main.rs
tests/ui/: hello_world.rs  target_features_err.rs  target_features_err.stderr
tests/ui/arch/: all.rs  all.stderr  all_memory_barrier.rs  all_memory_barrier.stderr  all_memory_barrier_with_group_sync.rs  all_memory_barrier_with_group_sync.stderr  any.rs  any.stderr  atomic_and.rs  atomic_compare_exchange.rs  atomic_exchange.rs  atomic_i_add.rs  atomic_i_decrement.rs  atomic_i_increment.rs  atomic_i_sub.rs  atomic_load.rs  atomic_or.rs  atomic_s_max.rs  atomic_s_min.rs  atomic_store.rs  atomic_u_max.rs  atomic_u_min.rs  f_add.rs  (+78 more)
(+49955 files in other folders)
