[workspace]
resolver = "2"
members = [
    "examples/runners/cpu",
    "examples/runners/ash",
    "examples/runners/wgpu",
    "examples/shaders/reduce",
    "examples/shaders/sky-shader",
    "examples/shaders/simplest-shader",
    "examples/shaders/compute-shader",
    "examples/shaders/mouse-shader",
    "examples/multibuilder",

    "crates/rustc_codegen_spirv-types",
    "crates/spirv-builder",
    "crates/spirv-std",
    "crates/spirv-std/shared",
    "crates/spirv-std/macros",

    "tests",
    "tests/deps-helper",
]
exclude = [
    # HACK(eddyb) separate workspace because `rustc_codegen_spirv` requires its
    # own `rust-toolchain.toml`, see also `crates/rustc_codegen_spirv/README.md`.
    "crates/rustc_codegen_spirv",
]

[workspace.package]
version = "0.9.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"

[workspace.dependencies]
spirv-std = { path = "./crates/spirv-std", version = "=0.9.0" }
spirv-std-types = { path = "./crates/spirv-std/shared", version = "=0.9.0" }
spirv-std-macros = { path = "./crates/spirv-std/macros", version = "=0.9.0" }
spirv-builder = { path = "./crates/spirv-builder", version = "=0.9.0", default-features = false  }
rustc_codegen_spirv = { path = "./crates/rustc_codegen_spirv", version = "=0.9.0", default-features = false }
rustc_codegen_spirv-types = { path = "./crates/rustc_codegen_spirv-types", version = "=0.9.0" }

# Enable incremental by default in release mode, as well.
[profile.release]
incremental = true
