[package]
name = "rspirv-linker"
version = "0.1.0"
authors = ["Jasper Bekkers <bekkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspirv = { path = "C:/Users/Jasper/traverse/rspirv/rspirv/"}
topological-sort = "0.1"

[dev-dependencies]
tempfile = "3.1"
pretty_assertions = "0.6"
