[package]
name = "rustc_codegen_spirv"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"
#keywords = []
#categories = []
#readme = "README.md"

[lib]
crate-type = ["dylib"]

[dependencies]
rspirv = { path = "../../rspirv/rspirv" }
rspirv-linker = { path = "../rspirv-linker" }
tar = "0.4"
topological-sort = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
tempfile = "3.1"
