[package]
name = "rustc_codegen_spirv"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"
#keywords = []
#categories = []
#readme = "README.md"

[lib]
crate-type = ["dylib"]

[dependencies]
bimap = "0.5"
rspirv = "0.7.0"
tar = "0.4.30"
thiserror = "1.0.20"
topological-sort = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
tempfile = "3.1"
