[package]
name = "rustc_codegen_spirv"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"
#keywords = []
#categories = []
#readme = "README.md"

[lib]
crate-type = ["dylib"]

[dependencies]
bimap = "0.5"
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "f11f8797bd4df2d1d22cf10767b39a5119c57551" }
tar = "0.4.30"
thiserror = "1.0.20"
topological-sort = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
tempfile = "3.1"
