[package]
name = "spirv-tools-sys"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[features]
as = ["tools"]
opt = ["val"]
val = ["tools"]
tools = []

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
