[package]
name = "spirv-tools-sys"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[features]
# Using this feature disables the compilation in the build script, but
# preserves the types so that spirv-tools can still work without needing
# to keep copies of some of the basic enums etc
use-installed = []

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
