[package]
name = "spirv-tools"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
use-installed = ["spirv-tools-sys/use-installed", "memchr"]

[dependencies]
spirv-tools-sys = { path = "../spirv-tools-sys" }
# Used for parsing output when running binaries
memchr = { version = "2.3", optional = true }

[dev-dependencies]
structopt = "0.3"

[[example]]
name = "as"
