[package]
name = "spirv-tools"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
use-installed-tools = ["spirv-tools-sys/use-installed-tools", "memchr"]
use-compiled-tools = ["spirv-tools-sys/use-compiled-tools"]

[dependencies]
spirv-tools-sys = { path = "../spirv-tools-sys", default-features = false }
# Used for parsing output when running binaries
memchr = { version = "2.3", optional = true }

[dev-dependencies]
structopt = "0.3"

[[example]]
name = "as"
required-features = ["use-compiled-tools"]
