# We make this tool its own workspace as it doesn't share dependencies with the
# rest of the workspace, and it shouldn't be built normally, only as a helper
# for CI so it would just slow down local development for no reason
[workspace]

[package]
name = "install-spirv-tools"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
tar = "0.4"
zstd = "0.13"
