[package]
name = "rustc_codegen_spirv-types"
description = "SPIR-V backend types shared between rustc_codegen_spirv and spirv-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rspirv = "0.11"
serde = { version = "1.0", features = ["derive"] }
