[package]
name = "rustc_codegen_spirv-types"
description = "SPIR-V backend types shared between rustc_codegen_spirv and spirv-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rspirv = { git = "https://github.com/beastle9end/rspirv" }
serde = { version = "1.0", features = ["derive"] }
