[package]
name = "spirv-builder"
description = "Helper for building shaders with rust-gpu"
# Documentation currently fails on docs.rs, but it doesn't have to. See https://github.com/EmbarkStudios/rust-gpu/issues/970
documentation = "https://embarkstudios.github.io/rust-gpu/api/spirv_builder/index.html"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["rustc_codegen_spirv/use-installed-tools"]
use-compiled-tools = ["rustc_codegen_spirv/use-compiled-tools"]
skip-toolchain-check = ["rustc_codegen_spirv/skip-toolchain-check"]
watch = ["notify"]

[dependencies]
rustc_codegen_spirv-types.workspace = true
# See comment in lib.rs invoke_rustc for why this is here
rustc_codegen_spirv.workspace = true
memchr = "2.4"
raw-string = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

notify = { version = "5.0.0-pre.11", optional = true }
