[package]
name = "spirv-builder"
description = "Helper for building shaders with rust-gpu"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# HACK(eddyb) allow `docs.rs` to build `spirv-builder` by making building
# `rustc_codegen_spirv` optional in a way that will always result in it being
# built normally (as `use-{installed,compiled}-tools` both require it), and
# produces a compile-time error if it's missing and `cfg(doc)` isn't set.
[package.metadata.docs.rs]
no-default-features = true

# NOTE(eddyb) the `dep:` prefixes used here prevents a feature with the name as
# that optional dependency, from being automatically created by Cargo, see:
# https://doc.rust-lang.org/cargo/reference/features.html#optional-dependencies
[features]
# See `rustc_codegen_spirv/Cargo.toml` for details on these features.
default = ["use-compiled-tools"]
use-installed-tools = ["rustc_codegen_spirv?/use-installed-tools"]
use-compiled-tools = ["rustc_codegen_spirv?/use-compiled-tools"]

watch = ["dep:notify"]

# HACK(eddyb) this is how `spirv-builder`'s `build.rs` indicates to its nested
# build of itself (done with a different `rustup` toolchain), to actually build
# the codegen backend (`rustc_codegen_spirv`) as a dylib, and gets its path.
internal-unstable-trigger-self-build-for-backend = ["dep:rustc_codegen_spirv"]

[build-dependencies]
cargo_metadata = { version = "0.18.1" }

[dependencies]
# See feature comment above about why `rustc_codegen_spirv` is optional.
rustc_codegen_spirv.workspace = true
rustc_codegen_spirv.optional = true

rustc_codegen_spirv-types.workspace = true

memchr = "2.4"
raw-string = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

notify = { version = "5.0.0-pre.11", optional = true }
