[package]
name = "spirv-std-macros"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.8"
syn = { version = "1.0.58", features=["full"] }
