[package]
name = "spirv-std"
version = "0.4.0-alpha.12"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"
description = "Standard functions and types for SPIR-V"

[dependencies]
bitflags = "1.2.1"
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
spirv-types = { path = "./shared", version = "0.4.0-alpha.12" }
spirv-std-macros = { path = "./macros", version = "0.4.0-alpha.12" }
glam = { version = ">=0.17, <=0.19", default-features = false, features = ["libm"], optional = true }

[features]
default = []
