[package]
name = "spirv-std"
description = "Standard functions and types for SPIR-V"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spirv-std-types.workspace = true
spirv-std-macros.workspace = true
bitflags = "1.2.1"

[target.'cfg(target_arch = "spirv")'.dependencies]
num-traits = { workspace = true, features = ["libm"] }
glam = { workspace = true, features = ["libm"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
num-traits = { workspace = true, default-features = true }
glam = { workspace = true, default-features = true }

[features]
default = []
