[package]
name = "testsuite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-builder = { path = "../spirv-builder", default-features = false }
rustc_codegen_spirv = { path = "../rustc_codegen_spirv", default-features = false }
lazy_static = "1.4"
pretty_assertions = "0.6"
cfg-if = "0.1.10"
