[package]
name = "example-runner-cpu"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
minifb = "0.19.1"
# bring in the shader as natively compiled code
example-shader = { path = "../example-shader", default-features = false }
# for math types, likely get from glam directly later instead
spirv-std = { path = "../../spirv-std" }

# for parallelism, not really needed though
rayon = "1.5"
