[package]
name = "example-runner"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"

# Note: Don't include this section in your own crates, these are just included here because our repo setup is weird.
[[bin]]
name = "example-runner"
doctest = false
test = false

[dependencies]
ash = "0.31"
ash-window = "0.5"
cfg-if = "1.0.0"
structopt = "0.3.20"
winit = "0.23.0"

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = { git = "https://github.com/EmbarkStudios/ash-molten", branch = "moltenvk-1.1.0" }

[build-dependencies]
spirv-builder = { path = "../../spirv-builder" }
