[package]
name = "example-shader"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { path = "../../spirv-std" }

# This crate is built specially by the example-runner crate, and so therefore
# should be excluded from the top-level `cargo build` etc.
[workspace]
