[package]
name = "multibuilder"
version = "0.1.0"
authors = ["khyperia <github@khyperia.com>"]
edition = "2018"

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
spirv-builder = { path = "../../crates/spirv-builder", default-features = false }
