[package]
name = "wgpu-example-compute-shader"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]
# Note: Don't include these two lines in your own crates, these are just included here because our repo setup is weird.
doctest = false
test = false

[dependencies]
spirv-std = { path = "../../spirv-std" }
