[package]
name = "wgpu-example-runner"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"

[dependencies]
wgpu = "0.6.0"
wgpu-subscriber = "0.1.0"
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
winit = { version = "0.22.1", features = ["web-sys"] }

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = { git = "https://github.com/EmbarkStudios/ash-molten", branch = "moltenvk-1.1.0" }

[build-dependencies]
spirv-builder = { path = "../../spirv-builder" }
