[package]
name = "wgpu-example-shader"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]
# Note: Don't include these two lines in your own crates, these are just included here because our repo setup is weird.
doctest = false
test = false

[dependencies]
spirv-std = { path = "../../spirv-std" }
