[package]
name = "wgpu-example-shader"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { path = "../../spirv-std" }

[build-dependencies]
spirv-builder = { path = "../../spirv-builder", default-features = false, optional = true }

[features]
default = ["build-spirv", "use-compiled-tools"]
build-spirv = ["spirv-builder"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]
