[package]
name = "compiletests-deps-helper"
version = "0.4.0-alpha.8"
description = "Shared dependencies of all the compiletest tests"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
spirv-std = { path = "../../crates/spirv-std", features = ["const-generics", "glam"] }
