[package]
name = "spirv-std-macros"
description = "Macros for spirv-std"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
spirv-std-types.workspace = true
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.58", features = ["full"] }
